Updates for release 2.3.0 and minor fixes and improvements (#22)
* 2.2->2.3

* Added release 2.3.0 & included a link back to release 1.4.5.

* Updated first render instructions with Chunkylauncher.jar launching

* Captialisation and slight wording tweaks

* Update tips.md

* Update release_notes.md

* Update download.md

* Removed a now fixed bug and updated an existing issue

Spigot type worlds can be buggy.

* Meantion the -f flag...

* Update download.md

* Requested changes

Change package back to `openjfx` and phrasing.

Added MODERN_VERSION for Chunky 2.X builds

* Added a few references to jackjt8's Guide to Chunky

* Update chunky2.md