@@ -1,16 +1,34 @@
 Installing Chunky
 =================
 
+<style>
+.warning {
+  padding: 20px;
+  background-color: #3e475b;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+  border-left: 5px solid #bd5634;
+}
+</style>
+
+<div class="warning">
+  <strong> If you are looking for installation instructions for Chunky 2.X+ please refer to <a href="https://jackjt8.github.io/ChunkyGuide/docs/setup/installation.html">jackjt8's Guide to Chunky - Installation</a>
+  </strong>
+</div>
+
 Before installing Chunky you will need Java 8 update 40 or later.
 [You can download Java here.](http://java.com)
 
-On Ubuntu, and some other Linux distributions, you may have to install a JavaFX
+On Ubuntu, some other Linux distributions, and with Java 11 or greater you may have to install a JavaFX
 library to be able to run Chunky. On Ubuntu 16.04, just have to install the
-package `openjfx`.
+package `openjfx` (ie apt-get install openjfx).
 
 There are several different ways to install Chunky. If you are using Windows
 then the [Windows Installer](@EXE_DL_LINK@) is probably the best option.
 There is also a handy [Mac Bundle](@DMG_DL_LINK@) for Mac users.
+However to use Chunky 2.X you need to use the ChunkyLauncher.jar.
 
 For other platforms you can [download the Chunky Launcher
 (ChunkyLauncher.jar)](http://chunkyupdate.llbit.se/ChunkyLauncher.jar). The
@@ -20,7 +38,7 @@ command in a terminal/command prompt:
 
     java -jar ChunkyLauncher.jar
 
-On later versions of OpenJDK Java, you might need to run it with something like this:
+On later versions of OpenJDK Java, you might need to run it with `--module-path` and `--add-modules` like below:
 
     java --module-path /usr/lib/jvm/java-11-openjdk/lib/ --add-modules javafx.controls,javafx.fxml -jar ChunkyLauncher.jar
 
